[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://BadGuys/Generic/HurtDetection.gd" type="Script" id=2]
[ext_resource path="res://Player/SoundEffects/HurtSound.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 3.0

[sub_resource type="Animation" id=2]
resource_name = "Flash"
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true ]
}

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.203922, 0.203922, 0.203922, 0.784314 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.701961, 0.0980392, 0.0509804, 0.784314 )

[sub_resource type="BitmapFont" id=8]

[sub_resource type="Theme" id=9]
default_font = SubResource( 8 )
ProgressBar/styles/bg = SubResource( 6 )
ProgressBar/styles/fg = SubResource( 7 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PoolVector2Array( 0, -8, 8, 0, 0, 8, -8, 0 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, -4, 4, 0, 0, 4, -4, 0 )

[node name="HurtDetection" type="Area2D" parent="."]
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtDetection"]
shape = SubResource( 1 )

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
script = ExtResource( 3 )

[node name="InvincibilityTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Flash = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer"]
margin_left = 8.0
margin_top = 9.0
margin_right = 189.0
margin_bottom = 38.0
theme = SubResource( 9 )
value = 100.0
percent_visible = false

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_InvincibilityTimer_timeout"]
